--- a/organization.css
+++ b/organization.css
@@ -49,6 +49,26 @@
     font-weight: 200;
     line-height: 1;
 }
+.organization-text-r {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    text-align: right;
+    color: #ffffff;
+    margin-top: 30px;
+    font-size: 32px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 200;
+    line-height: 1;
+}
+.organization-text-h2-r {
+    font-size: 48px;
+    font-weight: 200;
+    line-height: 1;
+    text-align: right;
+    width: 100%;
+}
 
 .organization-text-h2 {
     font-size: 48px;
